--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0272.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0272.html
@@ -512,23 +512,18 @@
             <ins class="alt" title="nlp 1.00">πᾶσαν</ins>
           </span>
         </span>
-        <span id="w_97" class="ocr_word" title="bbox 1670 1076 1887 1142" lang="grc">
+        <span id="w_97_0" class="ocr_word" title="bbox 1670 1076 1887 1142">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαμερί-</ins>
+            <ins class="alt" title="nlp 2.00">βασιλεύς.</ins>
           </span>
         </span>
-        <span id="w_98" class="ocr_word" title="bbox 1912 1098 1945 1130">
+        <span id="w_97_1" class="ocr_word" title="bbox 1670 1076 1887 1142">
           <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 1153 1893 1222">
-        <span id="w_99" class="ocr_word" title="bbox 206 1162 364 1207" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σασθε</ins>
-          </span>
-        </span>
         <span id="w_100" class="ocr_word" title="bbox 400 1177 432 1222" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἤ</ins>
@@ -695,9 +690,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 1426 1383 1889 1453" lang="grc">
+        <span id="w_132_0" class="ocr_word" title="bbox 1426 1383 1889 1453">
           <span class="alternatives">
-            <ins title="nlp 2.00">καλουμένην Ὀζολίμνην</ins>
+            <ins class="alt" title="nlp 2.00">καλουμένην</ins>
+          </span>
+        </span>
+        <span id="w_132_1" class="ocr_word" title="bbox 1426 1383 1889 1453">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ὀξολίμνην</ins>
           </span>
         </span>
       </span>
@@ -1468,7 +1468,7 @@
       <span class="ocr_line" title="bbox 205 2803 1880 2874">
         <span id="w_286" class="ocr_word" title="bbox 205 2808 258 2846" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">23 νώτου</ins>
+            <ins title="nlp 2.00">νώτου</ins>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 469 2806 504 2849">
