--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0335.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0335.html
@@ -85,11 +85,6 @@
             <ins class="alt" title="nlp 2.00">δ᾿</ins>
           </span>
         </span>
-        <span id="w_13_1" class="ocr_word" title="bbox 135 350 185 402">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_14" class="ocr_word" title="bbox 227 352 359 417" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀμφὶ</ins>
@@ -122,7 +117,7 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1543 370 1679 413" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὄντες</ins>
+            <ins title="nlp 2.00">ὄντες μετὰ</ins>
           </span>
         </span>
       </span>
@@ -656,11 +651,6 @@
             <ins class="alt" title="nlp 2.00">οὐκέτ᾿</ins>
           </span>
         </span>
-        <span id="w_126_0_1" class="ocr_word" title="bbox 1221 1380 1365 1411">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_126_1" class="ocr_word" title="bbox 1221 1380 1365 1411">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἀνεκτῶς</ins>
@@ -668,7 +658,7 @@
         </span>
         <span id="w_127" class="ocr_word" title="bbox 1672 1381 1818 1426" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶχεν,</ins>
+            <ins title="nlp 2.00">εἶχεν, 15</ins>
           </span>
         </span>
       </span>
@@ -1012,14 +1002,9 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_195_0_1" class="ocr_word" title="bbox 1387 2001 1477 2030">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_195_1" class="ocr_word" title="bbox 1387 2001 1477 2030">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">αὐτοῦ</ins>
+            <ins title="nlp 2.00">αὐτοῦ διαπράξασθαι. </ins>
           </span>
         </span>
       </span>
@@ -1068,7 +1053,7 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 606 2134 769 2196" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πόλις</ins>
+            <ins title="nlp 2.00">(πόλις</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 810 2136 862 2185" lang="grc">
