--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0273.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0273.html
@@ -876,9 +876,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 41 1763 1851 1831">
-        <span id="w_169" class="ocr_word" title="bbox 41 1787 73 1819">
+        <span id="w_169_0" class="ocr_word" title="bbox 41 1787 73 1819">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">D</ins>
+          </span>
+        </span>
+        <span id="w_169_1" class="ocr_word" title="bbox 41 1787 73 1819">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 97 1765 266 1828" lang="grc">
@@ -924,11 +929,6 @@
         <span id="w_179" class="ocr_word" title="bbox 1665 1781 1788 1829" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">χρει-</ins>
-          </span>
-        </span>
-        <span id="w_180" class="ocr_word" title="bbox 1810 1787 1851 1819">
-          <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1146,14 +1146,14 @@
             <ins title="nlp 2.00">Ἱεροσολύμων</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 1581 2169 1784 2217" lang="grc">
+        <span id="w_224_0" class="ocr_word" title="bbox 1581 2169 1784 2217">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπανερ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐπανερχόμενος</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 1808 2176 1849 2209">
+        <span id="w_224_1" class="ocr_word" title="bbox 1581 2169 1784 2217">
           <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1161,11 +1161,6 @@
         <span id="w_226" class="ocr_word" title="bbox 12 2251 67 2283">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">202</ins>
-          </span>
-        </span>
-        <span id="w_227" class="ocr_word" title="bbox 94 2230 302 2295" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">χόμενος</ins>
           </span>
         </span>
         <span id="w_228" class="ocr_word" title="bbox 342 2235 496 2279" lang="grc">
