--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0526.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0526.html
@@ -779,23 +779,18 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 1683 1555 1890 1607" lang="grc">
+        <span id="w_149_0" class="ocr_word" title="bbox 1683 1555 1890 1607">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπεστο-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπεστομάτισαν</ins>
           </span>
         </span>
-        <span id="w_150" class="ocr_word" title="bbox 1914 1578 1945 1609">
+        <span id="w_149_1" class="ocr_word" title="bbox 1683 1555 1890 1607">
           <span class="alternatives">
-            <ins title="nlp 2.00">b</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 1631 1893 1702">
-        <span id="w_151" class="ocr_word" title="bbox 184 1635 400 1701" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μάτισαν</ins>
-          </span>
-        </span>
         <span id="w_152" class="ocr_word" title="bbox 438 1633 594 1685" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁπόσα</ins>
@@ -972,23 +967,18 @@
             <ins class="alt" title="nlp 1.00">εἰς</ins>
           </span>
         </span>
-        <span id="w_187_0" class="ocr_word" title="bbox 1746 1881 1954 1933">
+        <span id="w_187_0_0" class="ocr_word" title="bbox 1746 1881 1954 1933">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">προσ-</ins>
+            <ins class="alt" title="nlp 2.00">προσκύνησιν</ins>
           </span>
         </span>
-        <span id="w_187_1" class="ocr_word" title="bbox 1746 1881 1954 1933">
+        <span id="w_187_0_1" class="ocr_word" title="bbox 1746 1881 1954 1933">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 189 1943 1894 2013">
-        <span id="w_188" class="ocr_word" title="bbox 189 1944 401 2009" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κύνησιν</ins>
-          </span>
-        </span>
         <span id="w_189" class="ocr_word" title="bbox 463 1948 617 1994" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
@@ -1192,23 +1182,18 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_228" class="ocr_word" title="bbox 1770 2252 1889 2303" lang="grc">
+        <span id="w_228_0" class="ocr_word" title="bbox 1770 2252 1889 2303">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνα-</ins>
+            <ins class="alt" title="nlp 2.00">ἀναλάβωνται,</ins>
           </span>
         </span>
-        <span id="w_229" class="ocr_word" title="bbox 1915 2274 1940 2306">
+        <span id="w_228_1" class="ocr_word" title="bbox 1770 2252 1889 2303">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 2328 1891 2399">
-        <span id="w_230" class="ocr_word" title="bbox 190 2333 469 2399" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λάβωνται,</ins>
-          </span>
-        </span>
         <span id="w_231" class="ocr_word" title="bbox 520 2354 635 2394" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
