--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0275.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0275.html
@@ -708,9 +708,9 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1568 1451 1809 1521" lang="grc">
+        <span id="w_138_0" class="ocr_word" title="bbox 1568 1451 1809 1521">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοκρά-</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοκράτωρ</ins>
           </span>
         </span>
       </span>
@@ -718,11 +718,6 @@
         <span id="w_139" class="ocr_word" title="bbox 73 1547 96 1579">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_140" class="ocr_word" title="bbox 120 1551 216 1599" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τωρ</ins>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 257 1551 309 1581" lang="grc">
@@ -906,23 +901,18 @@
             <ins class="alt" title="nlp 1.00">βέλτιον</ins>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 1613 1760 1806 1829" lang="grc">
+        <span id="w_177_0" class="ocr_word" title="bbox 1613 1760 1806 1829">
           <span class="alternatives">
-            <ins title="nlp 2.00">λογισά-</ins>
+            <ins class="alt" title="nlp 2.00">λογισάμενος</ins>
           </span>
         </span>
-        <span id="w_178" class="ocr_word" title="bbox 1832 1780 1872 1812">
+        <span id="w_177_1" class="ocr_word" title="bbox 1613 1760 1806 1829">
           <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 120 1838 1811 1909">
-        <span id="w_179" class="ocr_word" title="bbox 120 1861 264 1907" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μενος</ins>
-          </span>
-        </span>
         <span id="w_180" class="ocr_word" title="bbox 312 1861 435 1909" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
@@ -1356,14 +1346,14 @@
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 1678 2538 1810 2603" lang="grc">
+        <span id="w_265_0" class="ocr_word" title="bbox 1678 2538 1810 2603">
           <span class="alternatives">
-            <ins title="nlp 2.00">αἰτή-</ins>
+            <ins class="alt" title="nlp 2.00">αἰτήοὕτω</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1833 2557 1874 2589">
+        <span id="w_265_1" class="ocr_word" title="bbox 1678 2538 1810 2603">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1371,11 +1361,6 @@
         <span id="w_267" class="ocr_word" title="bbox 239 2644 261 2682">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">7</ins>
-          </span>
-        </span>
-        <span id="w_268" class="ocr_word" title="bbox 294 2655 416 2682" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὕτω</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 533 2636 884 2695" lang="grc">
@@ -1556,9 +1541,14 @@
             <ins title="nlp 2.00">erasae;</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 342 2880 374 2906" lang="grc">
+        <span id="w_306_0" class="ocr_word" title="bbox 342 2880 374 2906">
           <span class="alternatives">
-            <ins title="nlp 2.00">της</ins>
+            <ins class="alt" title="nlp 2.00">πης</ins>
+          </span>
+        </span>
+        <span id="w_306_1" class="ocr_word" title="bbox 342 2880 374 2906">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_307" class="ocr_word" title="bbox 466 2865 578 2906">
@@ -1579,11 +1569,6 @@
         <span id="w_310" class="ocr_word" title="bbox 791 2877 836 2904">
           <span class="alternatives">
             <ins title="nlp 2.00">m</ins>
-          </span>
-        </span>
-        <span id="w_311" class="ocr_word" title="bbox 869 2869 892 2905">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">2</ins>
           </span>
         </span>
       </span>
