--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0276.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0276.html
@@ -233,9 +233,9 @@
             <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 1793 549 1884 578" lang="grc">
+        <span id="w_45_0" class="ocr_word" title="bbox 1793 549 1884 578">
           <span class="alternatives">
-            <ins title="nlp 2.00">κύ-</ins>
+            <ins class="alt" title="nlp 2.00">κύνες</ins>
           </span>
         </span>
       </span>
@@ -243,11 +243,6 @@
         <span id="w_46" class="ocr_word" title="bbox 158 629 178 661">
           <span class="alternatives">
             <ins title="nlp 2.00">5</ins>
-          </span>
-        </span>
-        <span id="w_47" class="ocr_word" title="bbox 202 631 282 671" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">νες</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 322 609 646 677" lang="grc">
@@ -507,23 +502,18 @@
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1653 1069 1881 1137" lang="grc">
+        <span id="w_99_0" class="ocr_word" title="bbox 1653 1069 1881 1137">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀρχοντο-</ins>
+            <ins class="alt" title="nlp 2.00">ἀρχοντοπούλους</ins>
           </span>
         </span>
-        <span id="w_100" class="ocr_word" title="bbox 1905 1090 1935 1121">
+        <span id="w_99_1" class="ocr_word" title="bbox 1653 1069 1881 1137">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 1145 1884 1215">
-        <span id="w_101" class="ocr_word" title="bbox 196 1150 410 1210" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πούλους</ins>
-          </span>
-        </span>
         <span id="w_102" class="ocr_word" title="bbox 459 1148 793 1214" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καλουμένους</ins>
@@ -1446,19 +1436,18 @@
             <ins class="alt" title="nlp 1.00">ἀνδρίαν</ins>
           </span>
         </span>
-        <span id="w_283" class="ocr_word" title="bbox 1583 2815 1637 2853">
+        <span id="w_283_0" class="ocr_word" title="bbox 1583 2815 1637 2853">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
+            <ins class="alt" title="nlp 2.00">30</ins>
+          </span>
+        </span>
+        <span id="w_283_1" class="ocr_word" title="bbox 1583 2815 1637 2853">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐφωρμηκοτας</ins>
           </span>
         </span>
       </span>
-      <span class="ocr_line" title="bbox 198 2871 340 2906">
-        <span id="w_285" class="ocr_word" title="bbox 198 2871 340 2906" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐφωρμηκοτας</ins>
-          </span>
-        </span>
-      </span>
+      <span class="ocr_line" title="bbox 198 2871 340 2906"/>
     </div>
   </body>
 </html>
