--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0527.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0527.html
@@ -342,9 +342,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_65" class="ocr_word" title="bbox 584 845 891 894" lang="grc">
+        <span id="w_65_0" class="ocr_word" title="bbox 584 845 891 894">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μαλδουῖνον</ins>
+            <ins class="alt" title="nlp 2.00">Βαλδουῖνον</ins>
+          </span>
+        </span>
+        <span id="w_65_1" class="ocr_word" title="bbox 584 845 891 894">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 927 849 1285 910" lang="grc">
@@ -365,11 +370,6 @@
         <span id="w_69" class="ocr_word" title="bbox 1696 847 1721 899" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_70" class="ocr_word" title="bbox 1761 852 1816 900" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -708,9 +708,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 1681 1483 1815 1531" lang="grc">
+        <span id="w_136_0" class="ocr_word" title="bbox 1681 1483 1815 1531">
           <span class="alternatives">
-            <ins title="nlp 2.00">περι-</ins>
+            <ins class="alt" title="nlp 2.00">περιζωννύντες</ins>
           </span>
         </span>
       </span>
@@ -718,11 +718,6 @@
         <span id="w_137" class="ocr_word" title="bbox 65 1557 97 1589" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_138" class="ocr_word" title="bbox 121 1539 393 1602" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ζωννύντες</ins>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 430 1561 520 1605" lang="grc">
