--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0277.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0277.html
@@ -641,23 +641,18 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_126" class="ocr_word" title="bbox 1661 1353 1798 1417" lang="grc">
+        <span id="w_126_0" class="ocr_word" title="bbox 1661 1353 1798 1417">
           <span class="alternatives">
-            <ins title="nlp 2.00">περί-</ins>
+            <ins class="alt" title="nlp 2.00">περίορθρον</ins>
           </span>
         </span>
-        <span id="w_127" class="ocr_word" title="bbox 1824 1376 1864 1406">
+        <span id="w_126_1" class="ocr_word" title="bbox 1661 1353 1798 1417">
           <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 111 1426 1796 1495">
-        <span id="w_128" class="ocr_word" title="bbox 111 1434 299 1495" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὄρθρον</ins>
-          </span>
-        </span>
         <span id="w_129" class="ocr_word" title="bbox 337 1428 421 1487" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
@@ -804,16 +799,21 @@
             <ins class="alt" title="nlp 1.00">ἐντεταλμένον</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1714 1681 1797 1711" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 1714 1681 1797 1711">
           <span class="alternatives">
-            <ins title="nlp 2.00">πε-</ins>
+            <ins class="alt" title="nlp 2.00">πεποιηκὼς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 58 1736 1863 1806">
-        <span id="w_158" class="ocr_word" title="bbox 58 1738 329 1803" lang="grc">
+        <span id="w_158_0" class="ocr_word" title="bbox 58 1738 329 1803">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β ποιηκὼς</ins>
+            <ins class="alt" title="nlp 2.00">Β</ins>
+          </span>
+        </span>
+        <span id="w_158_1" class="ocr_word" title="bbox 58 1738 329 1803">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 367 1739 545 1787" lang="grc">
@@ -849,11 +849,6 @@
         <span id="w_165" class="ocr_word" title="bbox 1590 1740 1799 1806" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ζωγρίαν</ins>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 1821 1764 1863 1796">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
       </span>
@@ -1108,16 +1103,21 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_215" class="ocr_word" title="bbox 1710 2201 1796 2267" lang="grc">
+        <span id="w_215_0" class="ocr_word" title="bbox 1710 2201 1796 2267">
           <span class="alternatives">
-            <ins title="nlp 2.00">χά-</ins>
+            <ins class="alt" title="nlp 2.00">χάριτας.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 36 2279 1796 2348">
-        <span id="w_216" class="ocr_word" title="bbox 36 2301 261 2348" lang="grc">
+        <span id="w_216_0" class="ocr_word" title="bbox 36 2301 261 2348">
           <span class="alternatives">
-            <ins title="nlp 2.00">163 ριτας.</ins>
+            <ins class="alt" title="nlp 2.00">163</ins>
+          </span>
+        </span>
+        <span id="w_216_1" class="ocr_word" title="bbox 36 2301 261 2348">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 337 2281 565 2347" lang="grc">
@@ -1153,11 +1153,6 @@
         <span id="w_224" class="ocr_word" title="bbox 1545 2294 1664 2329" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅσον</ins>
-          </span>
-        </span>
-        <span id="w_225" class="ocr_word" title="bbox 1699 2281 1796 2345" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἤδη</ins>
           </span>
         </span>
       </span>
