--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0278.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0278.html
@@ -418,14 +418,14 @@
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 1551 893 1737 957" lang="grc">
+        <span id="w_81_0" class="ocr_word" title="bbox 1551 893 1737 957">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐφόδου</ins>
+            <ins class="alt" title="nlp 2.00">ἐφόδου</ins>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 1764 912 1883 942" lang="grc">
+        <span id="w_81_1" class="ocr_word" title="bbox 1551 893 1737 957">
           <span class="alternatives">
-            <ins title="nlp 2.00">ταύ-</ins>
+            <ins class="alt" title="nlp 2.00">ταύτας</ins>
           </span>
         </span>
       </span>
@@ -433,11 +433,6 @@
         <span id="w_83" class="ocr_word" title="bbox 142 991 180 1020">
           <span class="alternatives">
             <ins title="nlp 2.00">10</ins>
-          </span>
-        </span>
-        <span id="w_84" class="ocr_word" title="bbox 206 993 289 1033" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τας</ins>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 335 970 578 1037" lang="grc">
@@ -1313,9 +1308,9 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 1767 2458 1882 2493" lang="grc">
+        <span id="w_255_0" class="ocr_word" title="bbox 1767 2458 1882 2493">
           <span class="alternatives">
-            <ins title="nlp 2.00">συν-</ins>
+            <ins class="alt" title="nlp 2.00">συνεπαγομένων</ins>
           </span>
         </span>
       </span>
@@ -1323,11 +1318,6 @@
         <span id="w_256" class="ocr_word" title="bbox 137 2534 180 2563" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">30</ins>
-          </span>
-        </span>
-        <span id="w_257" class="ocr_word" title="bbox 204 2512 518 2578" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπαγομένων</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 556 2513 688 2565" lang="grc">
@@ -1453,7 +1443,7 @@
       <span class="ocr_line" title="bbox 315 2779 1809 2841">
         <span id="w_281" class="ocr_word" title="bbox 315 2779 685 2831" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">9 Κλαζομεναῖς</ins>
+            <ins title="nlp 2.00">Κλαζομεναῖς</ins>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 709 2795 749 2822">
