--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0279.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0279.html
@@ -241,14 +241,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 1625 604 1789 651" lang="grc">
+        <span id="w_45_0" class="ocr_word" title="bbox 1625 604 1789 651">
           <span class="alternatives">
-            <ins title="nlp 2.00">πετρο-</ins>
+            <ins class="alt" title="nlp 2.00">πετροβόλων</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1815 597 1839 628">
+        <span id="w_45_1" class="ocr_word" title="bbox 1625 604 1789 651">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -256,11 +256,6 @@
         <span id="w_47" class="ocr_word" title="bbox 56 674 82 706">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_48" class="ocr_word" title="bbox 107 659 269 724" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βολῶν</ins>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 306 659 534 725" lang="grc">
@@ -486,23 +481,18 @@
             <ins title="nlp 2.00">Ὦπον</ins>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 1627 967 1789 1021" lang="grc">
+        <span id="w_93_0" class="ocr_word" title="bbox 1627 967 1789 1021">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀκάθ-</ins>
+            <ins class="alt" title="nlp 2.00">ἀκάθεκτοι</ins>
           </span>
         </span>
-        <span id="w_94" class="ocr_word" title="bbox 1816 988 1861 1019">
+        <span id="w_93_1" class="ocr_word" title="bbox 1627 967 1789 1021">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 1045 1793 1113">
-        <span id="w_95" class="ocr_word" title="bbox 105 1065 232 1096" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕκτοι</ins>
-          </span>
-        </span>
         <span id="w_96" class="ocr_word" title="bbox 278 1050 410 1111" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἦσαν</ins>
@@ -931,23 +921,18 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_181" class="ocr_word" title="bbox 1638 1764 1790 1811" lang="grc">
+        <span id="w_181_0" class="ocr_word" title="bbox 1638 1764 1790 1811">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρα-</ins>
+            <ins class="alt" title="nlp 2.00">παρατυχὸυ</ins>
           </span>
         </span>
-        <span id="w_182" class="ocr_word" title="bbox 1816 1765 1861 1795">
+        <span id="w_181_1" class="ocr_word" title="bbox 1638 1764 1790 1811">
           <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 107 1821 1794 1889">
-        <span id="w_183" class="ocr_word" title="bbox 107 1823 257 1888" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τυχὸν</ins>
-          </span>
-        </span>
         <span id="w_184" class="ocr_word" title="bbox 293 1828 506 1888" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πέπλον,</ins>
@@ -1166,23 +1151,18 @@
             <ins class="alt" title="nlp 1.00">ἐπηκολούθει</ins>
           </span>
         </span>
-        <span id="w_227" class="ocr_word" title="bbox 1634 2151 1789 2197" lang="grc">
+        <span id="w_227_0" class="ocr_word" title="bbox 1634 2151 1789 2197">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρα-</ins>
+            <ins class="alt" title="nlp 2.00">παραθέων</ins>
           </span>
         </span>
-        <span id="w_228" class="ocr_word" title="bbox 1817 2144 1860 2175">
+        <span id="w_227_1" class="ocr_word" title="bbox 1634 2151 1789 2197">
           <span class="alternatives">
-            <ins title="nlp 2.00">25</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 2208 1793 2276">
-        <span id="w_229" class="ocr_word" title="bbox 105 2212 242 2260" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θέων</ins>
-          </span>
-        </span>
         <span id="w_230" class="ocr_word" title="bbox 279 2230 369 2275" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -1386,23 +1366,18 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_269" class="ocr_word" title="bbox 1651 2539 1788 2585" lang="grc">
+        <span id="w_269_0" class="ocr_word" title="bbox 1651 2539 1788 2585">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἤπει-</ins>
+            <ins class="alt" title="nlp 2.00">ἤπειρον</ins>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 1816 2531 1857 2562">
+        <span id="w_269_1" class="ocr_word" title="bbox 1651 2539 1788 2585">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 108 2597 1794 2659">
-        <span id="w_271" class="ocr_word" title="bbox 108 2615 196 2659" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ρον</ins>
-          </span>
-        </span>
         <span id="w_272" class="ocr_word" title="bbox 240 2597 527 2648" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καταλιπὼν</ins>
