--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0280.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0280.html
@@ -484,7 +484,7 @@
         </span>
         <span id="w_93" class="ocr_word" title="bbox 628 1056 961 1123" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(προεφθάκει</ins>
+            <ins title="nlp 2.00">προεφθάκει</ins>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 998 1078 1092 1123" lang="grc">
@@ -700,23 +700,18 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_137" class="ocr_word" title="bbox 1688 1362 1894 1436" lang="grc">
+        <span id="w_137_0" class="ocr_word" title="bbox 1688 1362 1894 1436">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπεγρά-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπεγράφετο.</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1920 1379 1945 1412">
+        <span id="w_137_1" class="ocr_word" title="bbox 1688 1362 1894 1436">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 1443 1895 1513">
-        <span id="w_139" class="ocr_word" title="bbox 208 1466 339 1511" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φετο.</ins>
-          </span>
-        </span>
         <span id="w_140" class="ocr_word" title="bbox 404 1467 429 1496" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -1458,7 +1453,7 @@
       <span class="ocr_line" title="bbox 321 2793 1890 2854">
         <span id="w_284" class="ocr_word" title="bbox 321 2793 346 2830" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">6 τούτοις</ins>
+            <ins title="nlp 2.00">τούτοις</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 691 2798 716 2836">
