--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0281.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0281.html
@@ -167,9 +167,9 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 1668 451 1793 499" lang="grc">
+        <span id="w_30_0" class="ocr_word" title="bbox 1668 451 1793 499">
           <span class="alternatives">
-            <ins title="nlp 2.00">πρυ-</ins>
+            <ins class="alt" title="nlp 2.00">πρυμνήσια</ins>
           </span>
         </span>
       </span>
@@ -177,11 +177,6 @@
         <span id="w_31" class="ocr_word" title="bbox 28 525 89 559">
           <span class="alternatives">
             <ins title="nlp 2.00">165</ins>
-          </span>
-        </span>
-        <span id="w_32" class="ocr_word" title="bbox 112 509 298 574" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μνήσια</ins>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 345 504 624 573" lang="grc">
@@ -256,23 +251,18 @@
             <ins title="nlp 2.00">Δαλασσηνὸς</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 1634 606 1792 653" lang="grc">
+        <span id="w_47_0" class="ocr_word" title="bbox 1634 606 1792 653">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρα-</ins>
+            <ins class="alt" title="nlp 2.00">παραπεπλευκέναι</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1817 606 1836 638">
+        <span id="w_47_1" class="ocr_word" title="bbox 1634 606 1792 653">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 110 660 1793 730">
-        <span id="w_49" class="ocr_word" title="bbox 110 661 438 712" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεπλευκέναι</ins>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 486 683 570 722" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
@@ -476,23 +466,18 @@
             <ins title="nlp 2.00">Δαλασσηνοῦ</ins>
           </span>
         </span>
-        <span id="w_91" class="ocr_word" title="bbox 1671 977 1790 1040" lang="grc">
+        <span id="w_91_0" class="ocr_word" title="bbox 1671 977 1790 1040">
           <span class="alternatives">
-            <ins title="nlp 2.00">βου-</ins>
+            <ins class="alt" title="nlp 2.00">βουλὴν</ins>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 1818 999 1859 1030">
+        <span id="w_91_1" class="ocr_word" title="bbox 1671 977 1790 1040">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 1051 1794 1118">
-        <span id="w_93" class="ocr_word" title="bbox 106 1056 200 1116" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λὴν</ins>
-          </span>
-        </span>
         <span id="w_94" class="ocr_word" title="bbox 235 1051 672 1118" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προκατήγγειλαν.</ins>
@@ -676,23 +661,18 @@
             <ins class="alt" title="nlp 1.00">οἶμαι</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1604 1361 1792 1412" lang="grc">
+        <span id="w_131_0" class="ocr_word" title="bbox 1604 1361 1792 1412">
           <span class="alternatives">
-            <ins title="nlp 2.00">παντά-</ins>
+            <ins class="alt" title="nlp 2.00">παντάπασι</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 1819 1381 1858 1412">
+        <span id="w_131_1" class="ocr_word" title="bbox 1604 1361 1792 1412">
           <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 1440 1795 1504">
-        <span id="w_133" class="ocr_word" title="bbox 104 1454 227 1488" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶσι</ins>
-          </span>
-        </span>
         <span id="w_134" class="ocr_word" title="bbox 271 1457 391 1504" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
@@ -1252,9 +1232,9 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 1645 2370 1788 2432" lang="grc">
+        <span id="w_242_0" class="ocr_word" title="bbox 1645 2370 1788 2432">
           <span class="alternatives">
-            <ins title="nlp 2.00">βασι-</ins>
+            <ins class="alt" title="nlp 2.00">βασιλεἱας</ins>
           </span>
         </span>
       </span>
@@ -1262,11 +1242,6 @@
         <span id="w_243" class="ocr_word" title="bbox 50 2467 83 2498">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_244" class="ocr_word" title="bbox 106 2449 237 2508" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λείας</ins>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 282 2445 429 2512" lang="grc">
@@ -1281,7 +1256,7 @@
         </span>
         <span id="w_247" class="ocr_word" title="bbox 552 2452 812 2513" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Kομνηὸς</ins>
+            <ins title="nlp 2.00">ομνηὸς</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 854 2445 1061 2508" lang="grc">
@@ -1346,23 +1321,18 @@
             <ins class="alt" title="nlp 1.00">αἴτιον</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1629 2520 1788 2588" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 1629 2520 1788 2588">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπαγ-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπαγγέλλων</ins>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 1813 2545 1853 2576">
+        <span id="w_260_1" class="ocr_word" title="bbox 1629 2520 1788 2588">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 2597 1788 2668">
-        <span id="w_262" class="ocr_word" title="bbox 106 2608 288 2667" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γέλλων</ins>
-          </span>
-        </span>
         <span id="w_263" class="ocr_word" title="bbox 322 2602 444 2668" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἥκω.</ins>
