--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0336.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0336.html
@@ -1363,14 +1363,9 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_266_0_1" class="ocr_word" title="bbox 1242 2463 1332 2493">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_266_1" class="ocr_word" title="bbox 1242 2463 1332 2493">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">αὐτοῦ</ins>
+            <ins title="nlp 2.00">αὐτοῦ διελάνθανε.</ins>
           </span>
         </span>
       </span>
@@ -1447,11 +1442,6 @@
             <ins class="alt" title="nlp 2.00">μετ᾿</ins>
           </span>
         </span>
-        <span id="w_282_0_1" class="ocr_word" title="bbox 1076 2618 1162 2663">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_282_1" class="ocr_word" title="bbox 1076 2618 1162 2663">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">αὐτὴν</ins>
@@ -1464,7 +1454,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1651 2619 1735 2664" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
+            <ins title="nlp 2.00">τῆς προκειμένης</ins>
           </span>
         </span>
       </span>
@@ -1528,8 +1518,7 @@
         </span>
         <span id="w_298" class="ocr_word" title="bbox 936 2787 987 2834">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II.</ins>
-            <del title="nlp 0.90">II.</del>
+            <ins title="nlp 2.00">II.</ins>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1020 2793 1060 2839">
